<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
  <TextView  
     android:layout_width="fill_parent" 
     android:layout_height="wrap_content" 
     android:textSize="10pt"
     android:text="@string/what_it_is" />
  <View
     android:layout_height="8dip"
     android:layout_width="fill_parent"/>
  <TextView  
     android:layout_width="fill_parent" 
     android:layout_height="wrap_content" 
     android:textSize="8pt"
     android:text="@string/intro" />
  <View
     android:layout_height="8dip"
     android:layout_width="fill_parent"/>
  <TextView  
     android:layout_width="fill_parent" 
     android:layout_height="wrap_content" 
     android:textSize="10pt"
     android:text="@string/ht_header" />
  <View
     android:layout_height="8dip"
     android:layout_width="fill_parent"/>
  <TextView  
     android:layout_width="fill_parent" 
     android:layout_height="wrap_content" 
     android:textSize="8pt"
     android:text="@string/howto" />
  <View
     android:layout_height="10dip"
     android:layout_width="fill_parent"/>
  <CheckBox android:id="@+id/checkbox"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/cb_text" />
</LinearLayout>

